--- a/portraits-viz.qmd
+++ b/portraits-viz.qmd
@@ -506,28 +506,28 @@ To read these passages in translation, hover over each column with your cursor.
   <div class="hover-text">
 .....<br>
 <span class="verse-line"><span class="line-number">149</span>Of her beauty, of her figure<br></span>
-<span class="verse-line">as it is in the written source<br></span>
-<span class="verse-line">I want to tell you about her appearance<br></span>
+<span class="verse-line">(as it is in the written source)<br></span>
+<span class="verse-line">and about her appearance, I want to tell you<br></span>
 <span class="verse-line">before I go too far.<br></span>
 <span class="verse-line">In this world or in this realm,<br></span>
 <span class="verse-line"><span class="line-number">154</span><span class="negation">no</span> man <span class="negation">ever</span> saw a more beautiful woman.<br></span>
 <span class="verse-line"><span class="negation">Never did</span> a duchess <span class="negation">or</span> a queen<br></span>
 <span class="verse-line"><span class="negation">have</span> on her head more beautiful hair.<br></span>
 <span class="verse-line">She had round ears.<br></span>
-<span class="verse-line">Plus, they were marvelously <span class="color-word">white</span>,<br></span>
+<span class="verse-line">What's more, they were marvelously <span class="color-word">white</span>,<br></span>
 <span class="verse-line"><span class="line-number">159</span>her eyebrows <span class="color-word">black</span> and becoming,<br></span>
 <span class="verse-line">and her eyes <span class="color-word">bright</span> and smiling,<br></span>
 <span class="verse-line"><span class="sequence-change">her face tender and <span class="unique-verse">covered</span><br></span></span>
 <span class="verse-line"><span class="sequence-change"><span class="color-word">like the rose that has only just bloomed</span>.<br></span></span>
 <span class="verse-line"><span class="unique-verse">Her teeth were <span class="color-word">white</span> and quite small.<br></span></span>
 <span class="verse-line"><span class="line-number">164</span><span class="unique-verse">A more beautiful mouth <span class="negation">no one ever</span> saw.<br></span></span>
-<span class="verse-line"><span class="sequence-change">She had such a pious gaze,<br></span></span>
+<span class="verse-line"><span class="sequence-change">She had such a pleasing expression,<br></span></span>
 <span class="verse-line"><span class="sequence-change">and her look and her features <span class="color-word">bright</span>.<br></span></span>
 <span class="verse-line"><span class="sequence-change">I believe on her nose and on her chin<br></span></span>
 <span class="verse-line"><span class="sequence-change">there was <span class="negation">no</span> defect <span class="negation">at all</span>.<br></span></span>
 <div class="empty-line"></div>
 <div class="empty-line"></div>
-<span class="verse-line"><span class="line-number">169</span><span class="sequence-change">Above the bust of her chest,<br></span></span>
+<span class="verse-line"><span class="line-number">169</span><span class="sequence-change">Below her mouth on her chest,<br></span></span>
 <span class="verse-line"><span class="sequence-change">it was <span class="color-word">whiter than a hawthorn flower</span>,<br></span></span>
 <span class="verse-line"><span class="sequence-change">and of course she had beautiful breasts,<br></span></span>
 <span class="verse-line"><span class="sequence-change">very well set, small, and beautiful.<br></span></span>
@@ -540,7 +540,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">179</span><span class="sequence-change"><span class="negation">She was neither too big nor too small.</span><br></span></span>
 <span class="verse-line"><span class="sequence-change">Her frame could <span class="negation">never</span> be described.<br></span></span>
 <span class="verse-line"><span class="sequence-change">The beauty of these <span class="unique-verse">proportions</span><br></span></span>
-<span class="verse-line"><span class="sequence-change">could <span class="negation">neither</span> be described <span class="negation">nor</span> <span class="unique-verse">appraised</span>.<br></span></span>
+<span class="verse-line"><span class="sequence-change">could <span class="negation">not</span> be described <span class="negation">without</span> <span class="unique-verse">praise</span>.<br></span></span>
 <span class="verse-line">Such a creature makes one lament<br></span>
 <span class="verse-line"><span class="line-number">184</span>when she does not care about her Creator.<br></span>
 <span class="verse-line">She received great presents<br></span>
@@ -548,7 +548,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">She had good and fitting clothes<br></span>
 <span class="verse-line">to better please her lovers,<br></span>
 <span class="verse-line"><span class="line-number">189</span>and she <span class="negation">did not</span> <span class="unique-verse">wear</span> woollen cloth.<br></span>
-<span class="verse-line">The worst day of the week,<br></span>
+<span class="verse-line">On the worst day of the week,<br></span>
 <span class="verse-line">she wore a fine <span class="color-word">purple silk</span> bliaut<br></span>
 <span class="verse-line">and adorned herself with an ermine mantle.<br></span>
 <span class="verse-line"><span class="color-word">Well-painted</span> shoes of Cordovan leather<br></span>
@@ -595,7 +595,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="unique-verse">Thinned</span> were her eyes.<br></span>
 <span class="verse-line">There was <span class="negation">not a shred</span> of pride there now.<br></span>
 <span class="verse-line"><span class="line-number">587</span>If you saw her ears,<br></span>
-<span class="verse-line">you would find a great marvel<br></span>
+<span class="verse-line">it would seem to you a great marvel<br></span>
 <span class="verse-line">for they were so skinny and deteriorated<br></span>
 <span class="verse-line">and all wooly with <span class="color-word">white</span> hairs.<br></span>
 <span class="verse-line"><span class="color-word">Black</span> and hairy was her chest.<br></span>
@@ -633,7 +633,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">Every day, Mary ate some,<br></span>
 <span class="verse-line">but this was a very <span class="unique-verse">poor life</span>.<br></span>
 <span class="verse-line">As soon as she had eaten up all her bread,<br></span>
-<span class="verse-line">then she went wild for the grasses of the fields<br></span>
+<span class="verse-line">then she plucked the grasses of the fields<br></span>
 <span class="verse-line"><span class="line-number">617</span>Like other beasts, she ate them.<br></span>
 <span class="verse-line"><span class="negation">None</span> of this bothered her.<br></span>
 <span class="verse-line">From then on, she drank from the stream.<br></span>
@@ -648,7 +648,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">whatever she once used to love,<br></span>
 <span class="verse-line">the fine delights and the fine <span class="unique-verse">games</span><br></span>
 <span class="verse-line">in which she used to take <span class="unique-verse">pleasure</span>.<br></span>
-<span class="verse-line">She was so blissful<br></span>
+<span class="verse-line">She felt so blessed<br></span>
 <span class="verse-line"><span class="line-number">632</span>when she had forgotten all of this.<br></span>
 <span class="verse-line"><span class="negation">Never</span> again in her life<br></span>
 <span class="verse-line"><span class="negation">did</span> she remember a day of folly.<br></span>
