--- a/portraits.qmd
+++ b/portraits.qmd
@@ -171,39 +171,39 @@ To read these passages in translation, hover over each column with your cursor.
   <div class="hover-text">
 .....<br>
 <span class="verse-line"><span class="line-number">157</span>Of her beauty, of her figure<br></span>
-<span class="verse-line">as it is in the written source<br></span>
-<span class="verse-line">I want to say a little about her appearance<br></span>
+<span class="verse-line">(as it is in the written source)<br></span>
+<span class="verse-line">and about her appearance, I want to say a little<br></span>
 <span class="verse-line">before I go too far.<br></span>
-<span class="verse-line">For at that time in that reign,<br></span>
-<span class="verse-line"><span class="line-number">162</span>no man saw a more beautiful woman.<br></span>
+<span class="verse-line">For at that time in that realm,<br></span>
+<span class="verse-line"><span class="line-number">162</span>no man ever saw a more beautiful woman.<br></span>
 <span class="verse-line">Never countess nor queen<br></span>
 <span class="verse-line">had over her brow more beautiful hair.<br></span>
 <span class="verse-line">She had round ears.<br></span>
 <span class="verse-line">What's more, they were marvelously white,<br></span>
 <span class="verse-line"><span class="line-number">167</span>her eyes bright and smiling,<br></span>
 <span class="verse-line">her eyebrows black and becoming,<br></span>
-<span class="verse-line">her little mouth mild,<br></span>
-<span class="verse-line">and pious her gaze,<br></span>
+<span class="verse-line">her small mouth well-proportioned,<br></span>
+<span class="verse-line">and pleasing her expression,<br></span>
 <span class="verse-line">her face tender and blushing<br></span>
-<span class="verse-line"><span class="line-number">172</span>like the rose that is always in bloom.<br></span>
+<span class="verse-line"><span class="line-number">172</span>like the rose that has just bloomed.<br></span>
 <span class="verse-line">Indeed neither on her nose nor on her chin<br></span>
-<span class="verse-line"><span class="folio-number">335vb</span>would you be aware of any defect.<br></span>
-<span class="verse-line">Her neck was white like ermine too.<br></span>
+<span class="verse-line"><span class="folio-number">335vb</span>would you notice any defect.<br></span>
+<span class="verse-line">On top of that, her neck was white like ermine.<br></span>
 <span class="verse-line">There flowed her blonde hair.<br></span>
 <span class="verse-line"><span class="line-number">177</span>The breasts of this lady<br></span>
 <span class="verse-line">were no smaller than apples.<br></span>
-<span class="verse-line">Above the cleavage of her chest,<br></span>
-<span class="verse-line">it was white like hawthorn flower.<br></span>
+<span class="verse-line">Below her throat on her chest,<br></span>
+<span class="verse-line">it was white like a hawthorn flower.<br></span>
 <span class="verse-line">She had white arms and white hands,<br></span>
 <span class="verse-line"><span class="line-number">182</span>her fingers shapely, slender, and smooth.<br></span>
 <span class="verse-line">She had a fine body and well molded<br></span>
-<span class="verse-line">from her underarm along her rib.<br></span>
+<span class="verse-line">from her underarm along her side.<br></span>
 <span class="verse-line">She was neither too big nor too small.<br></span>
 <span class="verse-line">Her frame could never be written.<br></span>
 <span class="verse-line"><span class="line-number">187</span>The beauty of this lady<br></span>
 <span class="verse-line">could never be written by any man.<br></span>
-<span class="verse-line">She was so courteous of speech.<br></span>
-<span class="verse-line">There was nothing to improve.<br></span>
+<span class="verse-line">She was so courteous of speech;<br></span>
+<span class="verse-line">there was nothing to improve.<br></span>
 <span class="verse-line">Such a creature makes one lament<br></span>
 <span class="verse-line"><span class="line-number">192</span>when she does not care about the Creator.<br></span>
 <span class="verse-line">She received many presents<br></span>
@@ -215,14 +215,14 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">she had a fine purple silk bliaut<br></span>
 <span class="verse-line">and adorned herself with an ermine mantle.<br></span>
 <span class="verse-line">Well-painted shoes of Cordovan leather<br></span>
-<span class="verse-line"><span class="line-number">202</span>she put these on all the days of the year.<br></span>
+<span class="verse-line"><span class="line-number">202</span>she wore all the days of the year.<br></span>
 <span class="verse-line">The citizens of the city<br></span>
 <span class="verse-line">loved her entirely for her beauty.<br></span>
-<span class="verse-line">The old men and the wise<br></span>
+<span class="verse-line">The aged men and the wise<br></span>
 <span class="verse-line">would all say, "God, what a shame!<br></span>
-<span class="verse-line"><span class="line-number">207</span>Oh alas evermore for this suffering!<br></span>
+<span class="verse-line"><span class="line-number">207</span>Oh alas evermore for this sufferer!<br></span>
 <span class="verse-line">There is much to bemoan of her youth.<br></span>
-<span class="verse-line">Alas evermore for her life<br></span>
+<span class="verse-line">Oh alas evermore for her life<br></span>
 <span class="verse-line">as it is so full of folly."<br></span>
 <span class="verse-line">Everyone in the city would say<br></span>
 <span class="verse-line"><span class="line-number">212</span>that she was of high parentage<br></span>
@@ -516,7 +516,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">loved her entirely for her beauty,<br></span>
 <span class="verse-line">and the old men and the wise<br></span>
 <span class="verse-line">would all say, "God, what a shame!<br></span>
-<span class="verse-line"><span class="line-number">199</span>Alas for this sufferer!<br></span>
+<span class="verse-line"><span class="line-number">199</span>Oh alas for this sufferer!<br></span>
 <span class="verse-line">There is much to bemoan of her youth.<br></span>
 <span class="verse-line">Alas evermore for her life,<br></span>
 <span class="verse-line">which is so full of folly."<br></span>
@@ -765,8 +765,8 @@ To read these passages in translation, hover over each column with your cursor.
   <div class="hover-text">
 .....<br>
 <span class="verse-line"><span class="line-number">159</span>Of her beauty, of her figure<br></span>
-<span class="verse-line">as it is in the written source<br></span>
-<span class="verse-line">I want to say a little about her appearance<br></span>
+<span class="verse-line">(as it is in the written source)<br></span>
+<span class="verse-line">and about her appearance, I want to say a little<br></span>
 <span class="verse-line">before I go on.<br></span>
 <span class="verse-line">At that time, there was no woman so beautiful<br></span>
 <span class="verse-line"><span class="line-number">164</span>for she was a gem above them all.<br></span>
@@ -776,28 +776,28 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">They were very marvelously white,<br></span>
 <span class="verse-line"><span class="folio-number">38v</span>her eyebrows black and becoming,<br></span>
 <span class="verse-line">and her eyes bright and overjoyed,<br></span>
-<span class="verse-line">her little mouth mild,<br></span>
-<span class="verse-line">and she had a simple gaze,<br></span>
+<span class="verse-line">her small mouth well-proportioned,<br></span>
+<span class="verse-line">and she had a simple expression,<br></span>
 <span class="verse-line">her face tender and blushing<br></span>
-<span class="verse-line"><span class="line-number">174</span>like a rose that is always in bloom.<br></span>
+<span class="verse-line"><span class="line-number">174</span>like a rose that has just bloomed.<br></span>
 <span class="verse-line">Indeed neither on her nose nor on her chin<br></span>
-<span class="verse-line">would you be aware of any defect.<br></span>
-<span class="verse-line">Along her neck was white like ermine.<br></span>
+<span class="verse-line">would you notice any defect.<br></span>
+<span class="verse-line">On top of that, her neck was white like ermine.<br></span>
 <span class="verse-line">There flowed her blonde hair.<br></span>
 <span class="verse-line"><span class="line-number">179</span>Each of the breasts of the lady<br></span>
-<span class="verse-line">was no more than an apple.<br></span>
-<span class="verse-line">Above the cleavage of her chest,<br></span>
-<span class="verse-line">it was white like hawthorn flower.<br></span>
+<span class="verse-line">was no bigger than an apple.<br></span>
+<span class="verse-line">Below her throat on her chest,<br></span>
+<span class="verse-line">it was white like a hawthorn flower.<br></span>
 <span class="verse-line">She had long arms and white hands,<br></span>
 <span class="verse-line"><span class="line-number">184</span>her fingers shapely, slender, and smooth.<br></span>
 <span class="verse-line">She had a fine body and was well molded<br></span>
-<span class="verse-line">from her underarm along her rib.<br></span>
+<span class="verse-line">from her underarm along her side.<br></span>
 <span class="verse-line">She was neither too big nor too small.<br></span>
 <span class="verse-line">Her frame could never be described.<br></span>
 <span class="verse-line"><span class="line-number">189</span>Nor could the beauty of this lady<br></span>
 <span class="verse-line">ever be described by any soul.<br></span>
-<span class="verse-line">She was so courteous of speech.<br></span>
-<span class="verse-line">There was nothing to improve.<br></span>
+<span class="verse-line">She was so courteous of speech;<br></span>
+<span class="verse-line">there was nothing to improve.<br></span>
 <span class="verse-line">Such a creature makes one lament<br></span>
 <span class="verse-line"><span class="line-number">194</span>when she does not care about her Creator.<br></span>
 <span class="verse-line"><span class="folio-number">39r</span>She received many presents<br></span>
@@ -806,18 +806,18 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">to better please her lovers.<br></span>
 <span class="verse-line"><span class="line-number">199</span>She did not care for woollen cloth.<br></span>
 <span class="verse-line">On any of the days of the week,<br></span>
-<span class="verse-line">she wore her own bliaut of fine purple silk<br></span>
+<span class="verse-line">she wore, instead, a bliaut of fine purple silk<br></span>
 <span class="verse-line">and adorned herself with an ermine mantle.<br></span>
 <span class="verse-line">Well-painted shoes of Cordovan leather,<br></span>
-<span class="verse-line"><span class="line-number">204</span>she put these on all the days of the year.<br></span>
+<span class="verse-line"><span class="line-number">204</span>she wore all the days of the year.<br></span>
 <span class="verse-line">Every man of the city<br></span>
 <span class="verse-line">loved her for her beauty.<br></span>
-<span class="verse-line">The old men and the wise<br></span>
+<span class="verse-line">The aged men and the wise<br></span>
 <span class="verse-line">would say, "Ah! What a shame!<br></span>
-<span class="verse-line"><span class="line-number">209</span>Alas was born suffering!<br></span>
+<span class="verse-line"><span class="line-number">209</span>Oh alas was born the sufferer!<br></span>
 <span class="verse-line">There is much to bemoan of her youth.<br></span>
-<span class="verse-line">Alas evermore, her life<br></span>
-<span class="verse-line">is so full of folly."<br></span>
+<span class="verse-line">Alas evermore for her life<br></span>
+<span class="verse-line">as it is so full of folly."<br></span>
 <span class="verse-line">Everyone in the city would say<br></span>
 <span class="verse-line"><span class="line-number">214</span>that she was of great parentage<br></span>
 <span class="verse-line">for she answered all with reason<br></span>
@@ -1077,37 +1077,37 @@ To read these passages in translation, hover over each column with your cursor.
   <div class="hover-text">
 .....<br>
 <span class="verse-line"><span class="line-number">155</span>Of her beauty and of her figure<br></span>
-<span class="verse-line">as it is in the written source<br></span>
-<span class="verse-line">I want to say a little about her appearance<br></span>
+<span class="verse-line">(as it is in the written source)<br></span>
+<span class="verse-line">and about her appearance, I want to say a little<br></span>
 <span class="verse-line">before I go too far.<br></span>
-<span class="verse-line">At that time and in that reign,<br></span>
+<span class="verse-line">At that time and in that realm,<br></span>
 <span class="verse-line"><span class="line-number">160</span>no man ever saw a more beautiful woman.<br></span>
 <span class="verse-line"><span class="folio-number">16va</span>No countess or queen<br></span>
 <span class="verse-line">ever had such a daughter.<br></span>
-<span class="verse-line">She had round ears,<br></span>
-<span class="verse-line">what's more, they were marvelously white,<br></span>
+<span class="verse-line">She had round ears.<br></span>
+<span class="verse-line">What's more, they were marvelously white,<br></span>
 <span class="verse-line"><span class="line-number">165</span>her eyebrows black and becoming,<br></span>
 <span class="verse-line">her eyes black and smiling,<br></span>
-<span class="verse-line">her mouth small and mild,<br></span>
-<span class="verse-line">and pious her gaze,<br></span>
+<span class="verse-line">her mouth small and well-proportioned,<br></span>
+<span class="verse-line">and pleasing her expression,<br></span>
 <span class="verse-line">her face tender and blushing<br></span>
-<span class="verse-line"><span class="line-number">170</span>like a rose that is always in bloom.<br></span>
+<span class="verse-line"><span class="line-number">170</span>like a rose that has just bloomed.<br></span>
 <span class="verse-line">Indeed neither on her nose nor on her chin<br></span>
 <span class="verse-line">was seen a defect.<br></span>
-<span class="verse-line">Along her neck was white like ermine.<br></span>
+<span class="verse-line">On top of that, her neck was white like ermine.<br></span>
 <span class="verse-line">There flowed her blonde hair.<br></span>
 <span class="verse-line"><span class="line-number">175</span>Each of the breasts of the lady<br></span>
 <span class="verse-line">was not a bit bigger than an apple.<br></span>
-<span class="verse-line">Above the cleavage of her chest,<br></span>
-<span class="verse-line">it was white like hawthorn flower.<br></span>
+<span class="verse-line">Below her throat on her chest,<br></span>
+<span class="verse-line">it was white like a hawthorn flower.<br></span>
 <span class="verse-line">She had white arms and beautiful hands,<br></span>
 <span class="verse-line"><span class="line-number">180</span>and long, slender, and smooth fingers.<br></span>
 <span class="verse-line">She was neither too big nor too small.<br></span>
 <span class="verse-line">Her frame could never be described.<br></span>
 <span class="verse-line">The beauty of this lady<br></span>
 <span class="verse-line">could never be written by any man.<br></span>
-<span class="verse-line"><span class="line-number">185</span>She was so courteous in speech.<br></span>
-<span class="verse-line">There was nothing to improve.<br></span>
+<span class="verse-line"><span class="line-number">185</span>She was so courteous of speech;<br></span>
+<span class="verse-line">there was nothing to improve.<br></span>
 <span class="verse-line">Such a creature makes one lament<br></span>
 <span class="verse-line">when she does not care about the Creator.<br></span>
 <span class="verse-line">She received gold and silver<br></span>
@@ -1119,15 +1119,15 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">195</span>she wore a fine purple silk bliaut<br></span>
 <span class="verse-line">and adorned herself with an ermine mantle.<br></span>
 <span class="verse-line">Well-painted shoes of Cordovan leather,<br></span>
-<span class="verse-line">she put these on all the days of the year.<br></span>
+<span class="verse-line">she wore all the days of the year.<br></span>
 <span class="verse-line">The citizens of the city<br></span>
 <span class="verse-line"><span class="line-number">200</span>loved her entirely for her beauty.<br></span>
-<span class="verse-line">The old men and the wise<br></span>
+<span class="verse-line">The aged men and the wise<br></span>
 <span class="verse-line">all would say, "God, what a shame!<br></span>
-<span class="verse-line">Alas evermore, the suffering!<br></span>
+<span class="verse-line">Alas evermore for the sufferer!<br></span>
 <span class="verse-line">There is much to bemoan of her youth.<br></span>
-<span class="verse-line"><span class="line-number">205</span>Alas evermore, her life<br></span>
-<span class="verse-line">is so full of folly."<br></span>
+<span class="verse-line"><span class="line-number">205</span>Alas evermore for her life<br></span>
+<span class="verse-line">as it is so full of folly."<br></span>
 <span class="verse-line">Everyone in the city would say<br></span>
 <span class="verse-line">that she was of such high parentage<br></span>
 <span class="verse-line">for she answered all with reason<br></span>
@@ -1389,10 +1389,10 @@ To read these passages in translation, hover over each column with your cursor.
   <div class="hover-text">
 .....<br>
 <span class="verse-line"><span class="line-number">157</span>Of her beauty, of her figure<br></span>
-<span class="verse-line">as it is in the written source<br></span>
-<span class="verse-line">I want to say a little about her appearance<br></span>
+<span class="verse-line">(as it is in the written source)<br></span>
+<span class="verse-line">and about her appearance, I want to say a little<br></span>
 <span class="verse-line">before I go too far.<br></span>
-<span class="verse-line">At that time and in that reign,<br></span>
+<span class="verse-line">At that time and in that realm,<br></span>
 <span class="verse-line"><span class="line-number">162</span>there was never a more beautiful woman.<br></span>
 <span class="verse-line">Never countess nor queen<br></span>
 <span class="verse-line">had on her head more beautiful hair.<br></span>
@@ -1400,28 +1400,28 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">and they were marvelously white,<br></span>
 <span class="verse-line"><span class="line-number">167</span>her eyebrows black and becoming,<br></span>
 <span class="verse-line">and her eyes sparkling and joyful,<br></span>
-<span class="verse-line">her mouth beautiful and mild,<br></span>
-<span class="verse-line">and pious her gaze,<br></span>
+<span class="verse-line">her mouth beautiful and well-proportioned,<br></span>
+<span class="verse-line">and pleasing her expression,<br></span>
 <span class="verse-line">her face tender and blushing<br></span>
 <span class="verse-line"><span class="line-number">172</span>like a freshly-bloomed rose.<br></span>
 <span class="verse-line">Indeed neither on her nose nor on her chin<br></span>
 <span class="verse-line">might you perceive any defect.<br></span>
 <span class="verse-line">Her neck was white like ermine.<br></span>
 <span class="verse-line">Long was her blonde hair.<br></span>
-<span class="verse-line"><span class="line-number">177</span>Not a bit bigger than an apple were<br></span>
+<span class="verse-line"><span class="line-number">177</span>Not a bit bigger than an apple was<br></span>
 <span class="verse-line">either of the breasts of this lady.<br></span>
-<span class="verse-line">Above the bump of her chest,<br></span>
-<span class="verse-line">it was as white as hawthorn flower.<br></span>
+<span class="verse-line">Below her mouth on her chest,<br></span>
+<span class="verse-line">it was as white as a hawthorn flower.<br></span>
 <span class="verse-line">She had white arms and white hands,<br></span>
 <span class="verse-line"><span class="line-number">182</span>her fingers shapely, slender, and smooth.<br></span>
 <span class="verse-line">She had a fine body and was well molded<br></span>
-<span class="verse-line">from her underarm along her rib.<br></span>
+<span class="verse-line">from her underarm along her side.<br></span>
 <span class="verse-line">Neither too big nor too small,<br></span>
 <span class="verse-line">her frame could never be described.<br></span>
 <span class="verse-line"><span class="line-number">187</span>The great beauty of this lady<br></span>
-<span class="verse-line">could not be written fully by any man<br></span>
-<span class="verse-line">She was so courteous in speech.<br></span>
-<span class="verse-line">There was nothing to improve.<br></span>
+<span class="verse-line">could not be written fully by any man.<br></span>
+<span class="verse-line">She was so courteous of speech;<br></span>
+<span class="verse-line">there was nothing to improve.<br></span>
 <span class="verse-line">Such a creature makes one lament<br></span>
 <span class="verse-line"><span class="line-number">192</span>when she does not care about her Creator.<br></span>
 <span class="verse-line">She received great presents,<br></span>
@@ -1433,15 +1433,15 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">she wore a fine purple silk bliaut<br></span>
 <span class="verse-line">and adorned herself with an ermine mantle.<br></span>
 <span class="verse-line"><span class="folio-number">114rd</span>Well-painted shoes of Cordovan leather,<br></span>
-<span class="verse-line"><span class="line-number">202</span>she put these on all the days of the year.<br></span>
+<span class="verse-line"><span class="line-number">202</span>she wore all the days of the year.<br></span>
 <span class="verse-line">The citizens of the city<br></span>
 <span class="verse-line">loved her entirely for her beauty.<br></span>
-<span class="verse-line">The old men and the wise<br></span>
+<span class="verse-line">The aged men and the wise<br></span>
 <span class="verse-line">all would say that it was a shame.<br></span>
-<span class="verse-line"><span class="line-number">207</span>"Alas for this suffering!<br></span>
+<span class="verse-line"><span class="line-number">207</span>"Oh alas for this sufferer!<br></span>
 <span class="verse-line">There is much to bemoan of her youth.<br></span>
-<span class="verse-line">Alas evermore, her life<br></span>
-<span class="verse-line">is so full of folly."<br></span>
+<span class="verse-line">Alas evermore for her life<br></span>
+<span class="verse-line">as it is so full of folly."<br></span>
 <span class="verse-line">Everyone in the city would say<br></span>
 <span class="verse-line"><span class="line-number">212</span>that she was of high parentage<br></span>
 <span class="verse-line">for she answered all with reason<br></span>
